--- a/appPeliculas/package.json
+++ b/appPeliculas/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sweetalert/with-react": "^0.1.1",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
