--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "paginapeliculas",
   "version": "1.0.0",
   "private": true,
-  "workspaces":["Back-end", "Front-end"],
+  "workspaces":["api", "frontend"],
   "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cd ./frontend && npm run build && rm -rf ../backend/dist && cp -r ./dist ../backend/dist && cd ../backend && npm run dev",
+    "dev": "cd ./frontend && npm run build && rm -rf ../api/dist && cp -r ./dist ../api/dist && cd ../api && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
