--- a/package.json
+++ b/package.json
@@ -2,30 +2,29 @@
   "name": "paginapeliculas",
   "version": "1.0.0",
   "private": true,
-  "workspaces":["api", "frontend"],
   "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cd ./frontend && npm run build && rm -rf ../api/dist && cp -r ./dist ../api/dist && cd ../api && npm run dev",
+    "dev": "vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@libsql/client": "^0.14.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.24.1",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.14.5",
-    "@libsql/client": "^0.14.0",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^3.24.1"
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
